Improve Discovery
Signed-off-by: Matthew Skinner <matt@pcmus.com>